<resources>
    <string name="app_name">FamilyMap</string>

    <string name="male_connection_button">Male</string>
    <string name="female_connection_button">Female</string>
    <string name="host_connection_text">Server Host:</string>
    <string name="port_connection_text">Server Port:</string>
    <string name="username_connection_text">User Name:</string>
    <string name="password_connection_text">Password:</string>
    <string name="first_name_connection_text">First Name:</string>
    <string name="last_name_connection_text">Last Name:</string>
    <string name="email_connection_text">Email:</string>
    <string name="gender_connection_text">Gender:</string>
    <string name="sign_connection_button">SIGN IN</string>
    <string name="register_connection_button">REGISTER</string>
    <string name="incorrect_info_login_toast">Need server host, server port, user name, and password.</string>
    <string name="incorrect_info_register_toast">Every field must be filled.</string>
    <string name="title_activity_map">Map</string>

    <!-- MainMapFragment -->
    <string name="basic_upper_text">Click on a maker</string>
    <string name="basic_lower_text">to see event details</string>

    <!-- PersonActivity -->
    <string name="person_first_name_info">FIRST NAME</string>
    <string name="person_last_name_info">LAST NAME</string>
    <string name="person_gender_info">GENDER</string>
    <string name="life_events_title">LIFE EVENTS</string>
    <string name="family_title">FAMILY</string>

    <!-- FilterActivity -->
    <string name="events_filter_text">Events</string>
    <string name="EVENTS_filter_text">EVENTS</string>
    <string name="filter_by_filter_text">FILTER BY</string>

    <!-- SearchActivity -->
    <string name="search_hint">Search for name, location...</string>

    <!-- MainActivityMapMenu -->
    <string name="search_title">Search</string>
    <string name="filter_title">Filter</string>
    <string name="settings_title">Settings</string>

    <!-- Settings -->
    <string name="life_story_upper_text">Life Story Lines</string>
    <string name="life_story_lower_text">SHOW LIFE STORY LINES</string>
    <string name="family_tree_upper_text">Family Tree Lines</string>
    <string name="family_tree_lower_text">SHOW TREE LINES</string>
    <string name="spouse_lines_upper_text">Spouse Lines</string>
    <string name="spouse_lines_lower_text">SHOW SPOUSE LINES</string>
    <string name="map_type_upper_text">Map Type</string>
    <string name="map_type_lower_text">BACKGROUND DISPLAY ON MAP</string>
    <string name="resync_data_upper_text">Re-sync Data</string>
    <string name="resync_data_lower_text">FROM FAMILY MAP SERVICE</string>
    <string name="logout_upper_text">Logout</string>
    <string name="logout_lower_text">RETURN TO LOGIN SCREEN</string>

    <string-array name="spinner_color_array">
        <item>Blue</item>
        <item>Red</item>
        <item>Green</item>
    </string-array>

    <string-array name="map_type_array">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
