<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:layout_weight="2"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="10dp"
            android:text="@string/host_connection_text" />


        <EditText
            android:id="@+id/host_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="10dp"
            android:text="@string/port_connection_text" />


        <EditText
            android:id="@+id/port_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="10dp"
            android:text="@string/username_connection_text" />


        <EditText
            android:id="@+id/username_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="10dp"
            android:text="@string/password_connection_text" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="10dp"
            android:text="@string/first_name_connection_text" />

        <EditText
            android:id="@+id/first_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="10dp"
            android:text="@string/last_name_connection_text" />

        <EditText
            android:id="@+id/last_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="10dp"
            android:text="@string/email_connection_text" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_connection_text"
            android:paddingRight="10dp"
            android:layout_gravity="right"/>

        <RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male_connection_button"
                    android:id="@+id/male_radioButton"
                    android:layout_marginRight="0dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female_connection_button"
                    android:id="@+id/femail_radioButton"/></LinearLayout>
        </RadioGroup>

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top | center"
        >

        <Button
            android:id="@+id/sign_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_connection_button" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_connection_button" />

    </LinearLayout>

</LinearLayout>